--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
 
   <link rel="stylesheet" href="styles.css">
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-  <script src="tetris.js"></script>
+  <script type="text/javascript" src = "game.js"></script>
+  <script type="text/javascript" src = "block.js"></script>
+  <script type="text/javascript" src = "canvas.js"></script>
+  <script type="text/javascript" src = "tetris.js"></script>
 </head>
 <body>
+
+  <h1 id = "score"></h1>
 
   <canvas id = "tetris"></canvas>
 
